--- a/src/app/pages/labs/labs.component.html
+++ b/src/app/pages/labs/labs.component.html
@@ -1,1 +1,6 @@
-<p>labs works!</p>
+<h1>{{ name() }}</h1>
+<input type="text" [value]="name()" (keypress)="changeHandler($event)" />
+
+<p>Total {{ tasks().length }}</p>
+
+<li *ngFor="let task of tasks()">{{ task.name }}</li>
